--- a/info.toml
+++ b/info.toml
@@ -1,5 +1,5 @@
 [meta]
 name = "Useful Information"
-author = "Miss"
+author = "Openplanet"
 category = "Utilities"
 blocks = [ "Plugin_UsefulInformation" ]
